[package]
name = "morc"
description = "Dead simple, minimal markdown generator library written in Rust."
version = "0.0.1"
edition = "2021"
license = "MIT"
authors = ["refcell"]
rust-version = "1.72"
keywords = ["markdown", "generator", "md", "readme", "library"]
categories = ["library", "markdown"]
homepage = "https://github.com/refcell/morc"
repository = "https://github.com/refcell/morc"
exclude = ["benches/", "tests/"]

[dependencies]
anyhow = "1.0.75"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
